--- a/components/u74suml54-go/overlays/development/deployment-patch.yaml
+++ b/components/u74suml54-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u74suml54-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a1edc06c9e.lfvr.p3.openshiftapps.com/rhtap/rhtap-qe:9b274ddc2585b42e939a2a8d6139274ddf1837a5@sha256:64cfc67d6952e82a80e44a1c384f644ae2b8a9be1c8845922849219057cb89c3
+          name: container-image
